fix: Remove nowrap from textarea

--- a/src/containers/InterpreterPage/index.css
+++ b/src/containers/InterpreterPage/index.css
@@ -19,7 +19,6 @@
   border-radius: 0;
   background-color: transparent;
   position: absolute;
-  white-space: nowrap;
 }
 
 .highlights-container {
